--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,23 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Sign in
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-list>
+    <ion-item>
+      <ion-label floating>Document</ion-label>
+      <ion-input type="text" [(ngModel)]="input.document"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label floating>Password</ion-label>
+      <ion-input type="password" [(ngModel)]="input.password">Password</ion-input>
+    </ion-item>
+  </ion-list>
+
+  <button ion-button outline block (click)="login()">Sign in</button>
 </ion-content>
