--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -4,9 +4,9 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header padding-top>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Editar Perfil</ion-title>
   </ion-navbar>
 
