--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
-<ion-header>
-  <ion-navbar>
+<ion-header padding-top>
+  <ion-navbar color="primary">
     <ion-title>
-      Sign in
+      Entrar
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -9,15 +9,15 @@
 <ion-content padding>
   <ion-list>
     <ion-item>
-      <ion-label floating>Document</ion-label>
+      <ion-label floating>Documento</ion-label>
       <ion-input type="text" [(ngModel)]="input.document"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label floating>Password</ion-label>
-      <ion-input type="password" [(ngModel)]="input.password">Password</ion-input>
+      <ion-label floating>Senha</ion-label>
+      <ion-input type="password" [(ngModel)]="input.password"></ion-input>
     </ion-item>
   </ion-list>
 
-  <button ion-button outline block (click)="login()">Sign in</button>
+  <button ion-button outline block (click)="login()">Entrar</button>
 </ion-content>
