--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -4,15 +4,13 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
+<ion-header padding-top>
+  <ion-navbar color="primary">
     <ion-title>Crédito Digital</ion-title>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
   </ion-navbar>
-
 </ion-header>
 
 
@@ -21,37 +19,31 @@
     <ion-row>
       <ion-col col-6>
         <div class="saldo-em-conta">Saldo em conta</div>
+        <div class="valor-saldo">{{client.credit | currency:'BRL'}}</div>
       </ion-col>
-    </ion-row>
 
-    <ion-row>
-      <ion-col col-6 class="valor-saldo">{{client.credit | currency:'BRL'}}</ion-col>
+      <ion-col col-6>
+        <button ion-button small float-right outline>Transferência</button>
+      </ion-col>
     </ion-row>
   </ion-grid>
   <hr>
 
   <ion-grid>
     <ion-row>
-      <ion-col col-4>
+      <ion-col col-sm-6 col-xs-6>
         <button ion-button icon-left outline (click)="openPage(transactionsPage)">
           <ion-icon name="list-box"></ion-icon>
           <span class="icon-title">Transações</span>
         </button>
       </ion-col>
 
-      <ion-col col-4 offset-1>
-        <button ion-button icon-left outline>
-          <ion-icon name="repeat"></ion-icon>
-          <span class="icon-title">Transferência</span>
-        </button>
-      </ion-col>
-
-      <ion-col col-4>
+      <ion-col col-sm-6 col-xs-6>
           <button ion-button icon-left outline (click)="openPage(editPage)">
-            <ion-icon name="repeat"></ion-icon>
-            <span class="icon-title">Editar Perfil</span>
+            <ion-icon name="person"></ion-icon>
+            <ion-label class="icon-title">Perfil</ion-label>
           </button>
-        </ion-col>
+      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
