--- a/src/pages/transactions/transactions.html
+++ b/src/pages/transactions/transactions.html
@@ -4,24 +4,27 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header padding-top>
 
-  <ion-navbar>
-    <ion-title>Minhas Transações</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Transações</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 <ion-content padding>
-  <ion-list>
+  <div *ngIf="transactions.length === 0">
+    <ion-label>Nenhuma transação realizada.</ion-label>
+  </div>
+  <ion-list *ngIf="transactions.length > 0">
     <button ion-item *ngFor="let item of transactions">
       <ion-grid>
         <ion-row [ngClass]="item.client_id === currentUser ? 'verde' : 'vermelho'">
-          <ion-col col-4>
+          <ion-col col-1 no-margin>
             <ion-icon name="{{item.client_id === currentUser ? 'arrow-round-up': 'arrow-round-down'}}"></ion-icon>
           </ion-col>
-          <ion-col col-4>{{item.value | currency:'BRL'}}</ion-col>
-          <ion-col col-4>{{item.inserted_at | date:'dd-MM-yyyy'}}</ion-col>
+          <ion-col col-4 no-margin class="transaction-item">{{item.value | currency:'BRL'}}</ion-col>
+          <ion-col col-4 no-margin class="transaction-item">{{item.inserted_at | date:'dd-MM-yyyy'}}</ion-col>
         </ion-row>
       </ion-grid>
     </button>  
