--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,4 +20,5 @@
   </ion-list>
 
   <button ion-button outline block (click)="login()">Entrar</button>
+  <button ion-button block (click)="register()">Registar</button>
 </ion-content>
