--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -17,7 +17,7 @@
   <ion-list *ngIf="client">
     <ion-item>
       <ion-label floating>Nome</ion-label>
-      <ion-input type="text" [(ngModel)]="client.name"></ion-input>
+      <ion-input type="text" maxlength="23" [(ngModel)]="client.name"></ion-input>
     </ion-item>
 
     <ion-item>
