--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -23,7 +23,7 @@
       </ion-col>
 
       <ion-col col-6>
-        <button ion-button small float-right outline>Transferência</button>
+        <button ion-button small float-right outline (click)="openPage(creditPage)">Transferência</button>
       </ion-col>
     </ion-row>
   </ion-grid>
