--- a/src/pages/send-credit/send-credit.html
+++ b/src/pages/send-credit/send-credit.html
@@ -1,16 +1,16 @@
+<!--
+  Generated template for the SendCreditPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header padding-top>
   <ion-navbar color="primary">
     <ion-title>Enviar Crédito</ion-title>
-    <ion-buttons start>
-      <button ion-button (click)="dismiss()">
-        <span ion-text showWhen="ios">Cancelar</span>
-        <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
-      </button>
-    </ion-buttons>
   </ion-navbar>
 </ion-header>
-  
-  
+
+
 <ion-content padding>
   <p text-center>Conta de Origen</p>
   <ion-list *ngIf="origin">
