--- a/src/pages/credit/credit.html
+++ b/src/pages/credit/credit.html
@@ -1,12 +1,6 @@
-<!--
-  Generated template for the CreditPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-  <ion-navbar>
-    <ion-title>Enviar Crédito</ion-title>
+<ion-header padding-top>
+  <ion-navbar color="primary">
+    <ion-title>Transferência</ion-title>
   </ion-navbar>
 </ion-header>
 
