Changing home screen

--- a/src/pages/send-credit/send-credit.html
+++ b/src/pages/send-credit/send-credit.html
@@ -12,7 +12,7 @@
 
 
 <ion-content padding>
-  <p text-center>Conta de Origen</p>
+  <p text-center>Conta de Origem</p>
   <ion-list *ngIf="origin">
     <ion-item>
       <ion-label>Nome</ion-label>
